introduction-to-programming/P1/Z17/.gcc.out
/rhome/m/mucanbarli1/workspace/OR/P1/Z17/main.c: In function ‘main’:
/rhome/m/mucanbarli1/workspace/OR/P1/Z17/main.c:35:10: warning: missing terminating ' character
   if(*p=='\') brojac++;
          ^
/rhome/m/mucanbarli1/workspace/OR/P1/Z17/main.c:35:10: error: missing terminating ' character
   if(*p=='\') brojac++;
          ^~~~~~~~~~~~~~
/rhome/m/mucanbarli1/workspace/OR/P1/Z17/main.c:35:8: warning: comparison between pointer and integer
   if(*p=='\') brojac++;
        ^~
/rhome/m/mucanbarli1/workspace/OR/P1/Z17/main.c:36:4: warning: operation on ‘p’ may be undefined [-Wsequence-point]
   p++;
   ~^~
/rhome/m/mucanbarli1/workspace/OR/P1/Z17/main.c:36:6: error: expected ‘)’ before ‘;’ token
   p++;
      ^
/rhome/m/mucanbarli1/workspace/OR/P1/Z17/main.c:37:2: error: expected expression before ‘}’ token
  }
  ^
